# rag-explore

./: .gitignore  README.md  pyproject.toml  rag_1_basic.py  rag_2_summarized_retrieval.py
data/: anthropic_summary_indexed_docs.json
data/anthropic_docs/: vector_db.pkl
evaluation/csvs/: evaluation_results_detailed.csv  evaluation_results_detailed_level_two.csv
evaluation/json_results/: evaluation_results_level_two.json  evaluation_results_one.json
src/: helpers.py  vector_db.py
src/db/: helpers.py  summary_index_vetctor_db.py  vector_db.py
src/eval/: metrics.py  viz.py
