[tool.poetry]
name = "rag-explore"
version = "0.1.0"
description = ""
authors = ["Philip Youssef <philip.youssef@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
voyageai = "^0.3.2"
anthropic = "^0.42.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
